--- a/Java/design_manager/src/main/java/com/stitchgalaxy/design_manager/DesignJDialog.form
+++ b/Java/design_manager/src/main/java/com/stitchgalaxy/design_manager/DesignJDialog.form
@@ -1,6 +1,6 @@
 <?xml version="1.1" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -100,9 +100,9 @@
                         <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalGlue"/>
                       </AuxValues>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="jTextField1">
+                    <Component class="javax.swing.JTextField" name="designUuid">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="jTextField1"/>
+                        <Property name="editable" type="boolean" value="false"/>
                         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[300, 20]"/>
                         </Property>
@@ -160,9 +160,9 @@
                         <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalGlue"/>
                       </AuxValues>
                     </Component>
-                    <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField1">
+                    <Component class="javax.swing.JTextField" name="releaseDate">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="jFormattedTextField1"/>
+                        <Property name="text" type="java.lang.String" value="01-01-2013"/>
                         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[300, 20]"/>
                         </Property>
@@ -173,6 +173,10 @@
                           <Dimension value="[300, 20]"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="releaseDateKeyReleased"/>
+                        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="releaseDateKeyTyped"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -220,9 +224,11 @@
                         <AuxValue name="classDetails" type="java.lang.String" value="Box.Filler.HorizontalGlue"/>
                       </AuxValues>
                     </Component>
-                    <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField2">
+                    <Component class="javax.swing.JFormattedTextField" name="priceUsd">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="jFormattedTextField1"/>
+                        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
+                          <Format format="&#xa4;#,##0" subtype="-1" type="4"/>
+                        </Property>
                         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[300, 20]"/>
                         </Property>
@@ -917,9 +923,6 @@
                               <Image iconType="3" name="/images/remove.png"/>
                             </Property>
                           </Properties>
-                          <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoveCategoryActionPerformed"/>
-                          </Events>
                         </Component>
                         <Component class="javax.swing.Box$Filler" name="filler7">
                           <Properties>
@@ -1103,9 +1106,6 @@
                               <Image iconType="3" name="/images/remove.png"/>
                             </Property>
                           </Properties>
-                          <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoveCategory1ActionPerformed"/>
-                          </Events>
                         </Component>
                         <Component class="javax.swing.Box$Filler" name="filler14">
                           <Properties>
