--- a/Java/sg_manager_web/src/main/webapp/css/sg.css
+++ b/Java/sg_manager_web/src/main/webapp/css/sg.css
@@ -150,7 +150,7 @@ div.upload input {
     background-color: #8AC007;
     font-weight: bold;
     font-size: 12px;
-    text-align: center;
+    text-align: left;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 3px;
@@ -163,6 +163,9 @@ div.upload input {
     border-radius: 5px;
     white-space: nowrap;
 }
+
+.super_container{ width: 150px;}
+
 .fileUpload input.upload {
 	position: absolute;
 	top: 0;
@@ -185,3 +188,76 @@ div.upload input {
 
 .innera {display: block; width: 100%; height: 100%;}
 .innera:hover {border:1px solid #0000ff; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//File upload
+.file_upload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+
+    color: #FFFFFF;
+    background-color: #8AC007;
+    font-weight: bold;
+    font-size: 12px;
+    text-align: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 4px;
+    text-decoration: none;
+    margin-left: 5px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    border: 1px solid #aaaaaa;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+.file_upload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.file_upload_container{ width: 150px;}
+
+//image
+.image_container {
+    width: 150px;
+    height: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.image_hyperlink {display: block; width: 100%; height: 100%;}
+.image_hyperlink:hover {border:1px solid #0000ff; }
