--- a/Java/sg_manager_web/src/main/webapp/css/sg.css
+++ b/Java/sg_manager_web/src/main/webapp/css/sg.css
@@ -79,6 +79,19 @@ input.text_input:invalid + .text_input_validation::after { content: '  '; }
 input.text_input:valid + .text_input_validation::after { content: ' ✓'; color: green}
 
 
+
+.img_control_container
+{
+    float: left;
+}
+
+.images_separator
+{
+    float: left; 
+    width: 10px; 
+    height: 10px;
+}
+
 .image_container {
   width: 150px;
   height: 100px;
@@ -98,135 +111,12 @@ input.text_input:valid + .text_input_validation::after { content: ' ✓'; color:
     height: 100%;
 }
 
-/*
-div.img
-  {
-  margin:5px;
-  padding: 5px;
-  border:0px solid #0000ff;
-  height:auto;
-  width:auto;
-  float:left;
-  text-align:center;
-  }
-div.img img
-  {
-  display:inline;
-  margin:5px;
-  border:1px solid #ffffff;
-  max-height:157px;
-  max-width:157px;
-  }
-div.img a:hover img
-  {
-  border:1px solid #0000ff;
-  }
-div.desc
-  {
-  text-align:center;
-  font-weight:normal;
-  width:157px;
-  margin:5px;
-  }
-  
-  
-  
-  
-div.upload {
-    width: 157px;
-    height: 57px;
-    background: url(https://lh6.googleusercontent.com/-dqTIJRTqEAQ/UJaofTQm3hI/AAAAAAAABHo/w7ruR1SOIsA/s157/upload.png);
-    overflow: hidden;
-}
-
-div.upload input {
-    display: block !important;
-    width: 157px !important;
-    height: 57px !important;
-    opacity: 0 !important;
-    overflow: hidden !important;
-}
-
-
-.fileUpload {
-	position: relative;
-	overflow: hidden;
-	margin: 10px;
-        
-        
-        
-        color: #FFFFFF;
-    background-color: #8AC007;
-    font-weight: bold;
-    font-size: 12px;
-    text-align: left;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 3px;
-    padding-bottom: 4px;
-    text-decoration: none;
-    margin-left: 5px;
-    margin-top: 0px;
-    margin-bottom: 5px;
-    border: 1px solid #aaaaaa;
-    border-radius: 5px;
-    white-space: nowrap;
-}
-
-.super_container{ width: 150px;}
-
-.fileUpload input.upload {
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin: 0;
-	padding: 0;
-	font-size: 20px;
-	cursor: pointer;
-	opacity: 0;
-	filter: alpha(opacity=0);
-}
-
-.container {
-    width: 150px;
-    height: 100px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-}
-
-.innera {display: block; width: 100%; height: 100%;}
-.innera:hover {border:1px solid #0000ff; }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//File upload
 .file_upload {
     position: relative;
     overflow: hidden;
     margin: 10px;
-
+    width: 45px;
+    
     color: #FFFFFF;
     background-color: #8AC007;
     font-weight: bold;
@@ -256,7 +146,3 @@ div.upload input {
     opacity: 0;
     filter: alpha(opacity=0);
 }
-
-.file_upload_container{ width: 150px;}
-
-*/
