--- a/Java/sg-manager-web/src/main/webapp/home.zul
+++ b/Java/sg-manager-web/src/main/webapp/home.zul
@@ -1,15 +1,15 @@
-<window title="Home" width="600px" border="normal" apply="org.zkoss.bind.BindComposer"
+<window title="Home" border="normal" apply="org.zkoss.bind.BindComposer"
         viewModel="@id('vm') @init('com.stitchgalaxy.sg_manager_web.HomeViewModel')">
     <listbox sclass="product-list" vflex="true" hflex="1"
-             model="@load(vm.productList)" selectedItem="@bind(vm.selectedProduct)" >
+             model="@load(vm.products)" selectedItem="@bind(vm.selectedProduct)" >
         <auxhead>
-            <auxheader colspan="4" class="topic">Contributor List</auxheader>
+            <auxheader colspan="4" class="topic">Products</auxheader>
         </auxhead>
         <listhead>
-            <listheader label="Id" width="80px" align="center" />
-            <listheader label="Name" align="center" />
-            <listheader label="Date" width="80px" align="center" />
-            <listheader label="Price" width="80px" align="center" />
+            <listheader label="Id" width="80px" align="center" sort="auto(id)" />
+            <listheader label="Name" align="center" sort="auto(name)" />
+            <listheader label="Date" width="80px" align="center" sort="auto(date)" />
+            <listheader label="Price" width="80px" align="center" sort="auto(price)" />
         </listhead>
         <template name="model" var="product">
             <listitem>
