--- a/Java/sg-manager-web/src/main/webapp/home.zul
+++ b/Java/sg-manager-web/src/main/webapp/home.zul
@@ -1,7 +1,7 @@
-<window title="Home" border="normal" apply="org.zkoss.bind.BindComposer"
+<window title="Stitch galaxy manager" border="normal" apply="org.zkoss.bind.BindComposer"
         viewModel="@id('vm') @init('com.stitchgalaxy.sg_manager_web.HomeViewModel')">
     <listbox sclass="product-list" vflex="true" hflex="1"
-             model="@load(vm.products)" selectedItem="@bind(vm.selectedProduct)" >
+             model="@load(vm.products)" selectedItem="@bind(vm.selectedProduct)" onSelect="@command('productSelected')" >
         <auxhead>
             <auxheader colspan="4" class="topic">Products</auxheader>
         </auxhead>
@@ -19,6 +19,41 @@
                 <listcell label="@load(product.price)" />
             </listitem>
         </template>
- 
     </listbox>
+    <hbox style="margin-top:20px" visible="@bind(not empty vm.productDetailsError)">
+            <hlayout>
+                <label value="@bind(vm.productDetailsError)" style="font-weight:bold"/>
+            </hlayout>
+    </hbox>
+<div visible="@bind(not empty vm.product)">
+<vbox>
+<hlayout height="100px"></hlayout>
+<label style="color:red">Edit product details</label>
+<grid>
+            <columns>
+                <column label="Type" width="120px" />
+                <column label="Content" />
+                <column label="Component" width="200px" />
+            </columns>
+            <rows>
+                <row>
+                    <label value="UserName" width="150px" />
+                    <hlayout>
+                        <textbox value="@bind(vm.product.name)"
+                            width="150px" tabindex="1" />
+                    </hlayout>
+                    <label class="error" value="test" />
+                </row>
+            </rows>
+        </grid>
+</vbox>
+</div>
+
+
+
+
+
+
+
+
 </window>
