--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="stitchGalaxy">
+<html>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -17,20 +17,18 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <div ng-view="login.html"></div>
+    <div>Hello moto</div>
     
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js(app) scripts/site.js -->
-    <script src="/components/app.js"></script>
     <!-- endbuild -->
 </body>
 </html>
