--- a/static/app/sass/app.scss
+++ b/static/app/sass/app.scss
@@ -1,4 +1,4 @@
 body {
-    background-image: url(/images/test.png);
-    background-color: red;
+    //background-image: url(/images/test.png);
+    //background-color: red;
 }
