--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -1,34 +1,164 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- build:css(app) css/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(app) css/site.css -->
-    <link rel="stylesheet" href="/css/app.css">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <div>Hello moto</div>
-    
-    <!-- build:js(app) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- build:css(app) css/vendor.css -->
+        <!-- bower:css -->
+        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+        <!-- endbower -->
+        <!-- endbuild -->
+        <!-- build:css(app) css/site.css -->
+        <link rel="stylesheet" href="/css/app.css">
+        <!-- endbuild -->
+    </head>
+    <body>
+        <!--[if lt IE 10]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <span class="glyphicon glyphicon-home"></span>
+                        <!--<img width="100" height="20" alt="Brand" src="/images/brand.png"/>-->
+                    </a>
+                </div>
 
-    <!-- build:js(app) scripts/site.js -->
-    <!-- endbuild -->
-</body>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#/about">About</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe"></span> Language</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">English</a></li>
+                                <li><a href="#">Русский</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-th"></span> Designs</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> User</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+        <div class="container-fluid">
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <h1>H</h1>
+            <hr class="unstyled"/>
+        </div>
+
+        <footer>
+            <div class="container">
+                <div class="row links">
+                    <div class="col-sm-3">
+                        <ul class="list-unstyled">
+                            <li class="heading"><strong>About</strong></li>
+                            <li><a href="#">Our mission</a></li>
+                            <li><a href="#">Our plans</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+
+                        <ul class="list-unstyled">
+                            <li class="heading"><strong>Contact us</strong></li>
+                            <li><a href="#">Contacts</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+
+                        <ul class="list-unstyled">
+                            <li class="heading"><strong>Social</strong></li>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Google+</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <ul class="list-unstyled">
+                            <li class="heading"><strong>Language</strong></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe"></span> Language</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">English</a></li>
+                                    <li><a href="#">Русский</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <hr class="unstyled"/>
+                <div class="row extra-links">
+                    <div class="col-sm-9">
+                        <div class="legal"><span><a href="#">Terms of use</a></span></div>
+                        <div class="legal"><span><a href="#">Privacy notice</a></span></div>
+                    </div>
+                    <div class="col-sm-3">
+                        <p class="text-right">Copyright &copy; 2015 Stitch Galaxy</p>
+                        <p class="text-right">Except where noted, all rights reserved.</p>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
+
+
+        <!-- build:js(app) scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="../bower_components/angular/angular.js"></script>
+        <script src="../bower_components/angular-route/angular-route.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+
+        <!-- build:js(app) scripts/site.js -->
+        <!-- endbuild -->
+    </body>
 </html>
