--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -91,7 +91,7 @@
             <h1>H</h1>
             <h1>H</h1>
             <h1>H</h1>
-            <hr class="unstyled"/>
+            <hr class="hr-unstyled"/>
         </div>
 
         <footer>
@@ -133,11 +133,12 @@
                         </ul>
                     </div>
                 </div>
-                <hr class="unstyled"/>
+                <hr class="hr-unstyled"/>
                 <div class="row extra-links">
                     <div class="col-sm-9">
-                        <div class="legal"><span><a href="#">Terms of use</a></span></div>
-                        <div class="legal"><span><a href="#">Privacy notice</a></span></div>
+                        <div class="legal">
+                            <span class="legal-link"><a href="#">Terms of use</a></span>
+                            <span class="legal-link"><a href="#">Privacy notice</a></div></span>
                     </div>
                     <div class="col-sm-3">
                         <p class="text-right">Copyright &copy; 2015 Stitch Galaxy</p>
