--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -86,44 +86,39 @@
 
                 <div class="row explanation">
                     <div class="col-xs-12"><span>We'll <strong>never</strong> post without your permission.</span></div>
-
                 </div>
-                <div class="row"><h5><strong>or</strong></h5></div>
                 <div class="row">
-                    <div class="col-xs-12"><h4>Log in to your Stitch Galaxy account</h4></div>
+                    <div class="col-xs-12"><h5><strong>or</strong></h5></div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h4>Log in to your Stitch Galaxy account</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <p>
+                            <input type="email" class="form-control" placeholder="Email"/>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <p>
+                            <input type="password" class="form-control" placeholder="Password"/>
+                        </p>
 
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
-            <h1>H</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <a href="#" class="login-button" id="login-button">
+                            <span class="provider-name">Login</span>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
             <hr class="hr-unstyled"/>
         </div>
 
